Fix T65976: switching to workbench engine in lookdev mode shows wrong state